<resources>
    <string name="app_name">SimpleTip</string>
    <string name="total_cost_info_text"><u>Total cost per person:</u></string>
    <string name="per_person_info_text"><u>Tip per person:</u></string>
    <string name="bill">Bill:</string>
    <string name="number_of_people"># Of People:</string>
    <string name="tip_percent">Tip %:</string>
    <string name="bill_hint">Enter Bill</string>
    <string name="default_dollar_value">0.00</string>
    <string name="default_tip_percent">0%</string>
    <string name="default_num_people">1</string>
    <!--    <string name="dollar_format">$ %1$s</string>-->
</resources>